fix text alignment in card component (#541)

--- a/src/number-card/card.component.scss
+++ b/src/number-card/card.component.scss
@@ -19,6 +19,7 @@ ngx-charts-number-card {
 
     .value-text {
       pointer-events: none;
+      dominant-baseline: hanging;
     }
   }
 
